feat: improve GitHub account choice
